--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sk">
 
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#ffffff" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Kuchárska kniha 2</title>
+  <title>Moja kuchárska kniha 2</title>
   <!-- <% if (process.env.NODE_ENV === 'production') { %>  -->
   <script>
     var env = {
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>Na beh tejto aplikácie musíte mať povolený JavaScript v prehliadači.</noscript>
   <script src="%PUBLIC_URL%/DragDropTouch.js"></script>
 
   <div id="root"></div>
