--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,18 @@
   <noscript>Na beh tejto aplikácie musíte mať povolený JavaScript v prehliadači.</noscript>
   <script src="%PUBLIC_URL%/DragDropTouch.js"></script>
 
-  <div id="root"></div>
+  <div id="root">
+    <div
+      style="z-index: 3; position: fixed; top: 0; bottom: 0; left: 0; right: 0; display: flex; justify-content: center; align-items: center; background-color: white; font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', 'Noto Sans', 'Liberation Sans', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';">
+      <div style="width: 100%; text-align: center;">
+        <img src="%PUBLIC_URL%/logo512.png" alt='obrázok'
+          style="aspect-ratio: 1; width: 50%; max-width: 512px; border-radius: 32px; padding: 0; margin: 0;" />
+        <h1
+          style="padding-top: 0.3rem; font-size: calc(1.325rem + 0.9vw);margin-top: 0; margin-bottom: 0.5rem; font-weight: 500; line-height: 1.2;">
+          Načítava sa...</h1>
+      </div>
+    </div>
+  </div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
