--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="sk">
-
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#ffffff" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
+    <head>
+        <meta charset="utf-8" />
+        <link
+            rel="icon"
+            href="%PUBLIC_URL%/favicon.ico"
+        />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1"
+        />
+        <meta
+            name="theme-color"
+            content="#ffffff"
+        />
+        <meta
+            name="description"
+            content="Web site created using create-react-app"
+        />
+        <link
+            rel="apple-touch-icon"
+            href="%PUBLIC_URL%/logo192.png"
+        />
+        <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
+        <link
+            rel="manifest"
+            href="%PUBLIC_URL%/manifest.json"
+        />
+        <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -22,39 +39,77 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Moja kuchárska kniha 2</title>
-  <!-- <% if (process.env.NODE_ENV === 'production') { %>  -->
-  <script>
-    var env = {
-      baseApiUrl: '${BASE_API_URL}',
-    };
-  </script>
-  <!-- <% } else { %> -->
-  <script>
-    var env = {
-      baseApiUrl: '/api',
-    };
-  </script>
-  <!-- <% } %> -->
-</head>
+        <title>Moja kuchárska kniha 2</title>
+        <!-- <% if (process.env.NODE_ENV === 'production') { %>  -->
+        <script>
+            var env = {
+                baseApiUrl: '${BASE_API_URL}'
+            };
+        </script>
+        <!-- <% } else { %> -->
+        <script>
+            var env = {
+                baseApiUrl: '/api'
+            };
+        </script>
+        <!-- <% } %> -->
+    </head>
 
-<body>
-  <noscript>Na beh tejto aplikácie musíte mať povolený JavaScript v prehliadači.</noscript>
-  <script src="%PUBLIC_URL%/DragDropTouch.js"></script>
+    <body>
+        <noscript>Na beh tejto aplikácie musíte mať povolený JavaScript v prehliadači.</noscript>
+        <script src="%PUBLIC_URL%/DragDropTouch.js"></script>
 
-  <div id="root">
-    <div
-      style="z-index: 3; position: fixed; top: 0; bottom: 0; left: 0; right: 0; display: flex; justify-content: center; align-items: center; background-color: white; font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', 'Noto Sans', 'Liberation Sans', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';">
-      <div style="width: 100%; text-align: center;">
-        <img src="%PUBLIC_URL%/logo512.png" alt='obrázok'
-          style="aspect-ratio: 1; width: 50%; max-width: 512px; border-radius: 32px; padding: 0; margin: 0;" />
-        <h1
-          style="padding-top: 0.3rem; font-size: calc(1.325rem + 0.9vw);margin-top: 0; margin-bottom: 0.5rem; font-weight: 500; line-height: 1.2;">
-          Načítava sa...</h1>
-      </div>
-    </div>
-  </div>
-  <!--
+        <div id="root">
+            <div
+                style="
+                    z-index: 3;
+                    position: fixed;
+                    top: 0;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: white;
+                    font-family:
+                        system-ui,
+                        -apple-system,
+                        'Segoe UI',
+                        Roboto,
+                        'Helvetica Neue',
+                        'Noto Sans',
+                        'Liberation Sans',
+                        Arial,
+                        sans-serif,
+                        'Apple Color Emoji',
+                        'Segoe UI Emoji',
+                        'Segoe UI Symbol',
+                        'Noto Color Emoji';
+                "
+            >
+                <div style="width: 100%; text-align: center">
+                    <img
+                        src="%PUBLIC_URL%/logo512.png"
+                        alt="obrázok"
+                        style="aspect-ratio: 1; width: 50%; max-width: 512px; border-radius: 32px; padding: 0; margin: 0"
+                    />
+                    <h1
+                        style="
+                            padding-top: 0.3rem;
+                            font-size: calc(1.325rem + 0.9vw);
+                            margin-top: 0;
+                            margin-bottom: 0.5rem;
+                            font-weight: 500;
+                            line-height: 1.2;
+                        "
+                    >
+                        Načítava sa...
+                    </h1>
+                </div>
+            </div>
+        </div>
+        <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -63,7 +118,5 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-</body>
-
+    --></body>
 </html>
