--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8" />
         <link
             rel="icon"
-            href="%PUBLIC_URL%/favicon.ico"
+            href="/favicon.ico"
         />
         <meta
             name="viewport"
-            content="width=device-width, initial-scale=1"
+            content="width=device-width, initial-scale=1.0"
         />
         <meta
             name="theme-color"
@@ -20,41 +20,44 @@
         />
         <link
             rel="apple-touch-icon"
-            href="%PUBLIC_URL%/logo192.png"
+            href="/logo192.png"
         />
-        <!--
-            manifest.json provides metadata used when your web app is installed on a
-            user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-        -->
         <link
             rel="manifest"
-            href="%PUBLIC_URL%/manifest.json"
+            href="/manifest.json"
         />
-        <!--
-            Notice the use of %PUBLIC_URL% in the tags above.
-            It will be replaced with the URL of the `public` folder during the build.
-            Only files inside the `public` folder can be referenced from the HTML.
-
-            Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-            work correctly both with client-side routing and a non-root public URL.
-            Learn how to configure a non-root public URL by running `npm run build`.
-        -->
         <title>Moja kuchárska kniha 2</title>
 
         <script>
-            var env = {
-                /* <% if (process.env.NODE_ENV === 'production') { %> */
-                baseApiUrl: '${BASE_API_URL}',
-                /* <% } else { %> */
-                baseApiUrl: '/api'
-                /* <% } %> */
-            };
+            var env = (() => {
+                const toNumber = (text) => {
+                    if (isNaN(+text)) {
+                        return null;
+                    }
+                    return +text;
+                };
+                const toString = (text) => {
+                    if (text.trim().length === 0 || text.trim().startsWith('%VITE_')) {
+                        return null;
+                    }
+                    return text.trim();
+                };
+                // <% if (process.env.NODE_ENV === 'production') { %>
+                return {
+                    baseApiUrl: toString('${BASE_API_URL}'),
+                };
+                // <% } else { %>
+                return {
+                    BASE_PATH: '/api',
+                };
+                // <% } %>
+            })();
         </script>
     </head>
 
     <body>
         <noscript>Na beh tejto aplikácie musíte mať povolený JavaScript v prehliadači.</noscript>
-        <script src="%PUBLIC_URL%/DragDropTouch.js"></script>
+        <script src="/DragDropTouch.js"></script>
 
         <div id="root">
             <div
@@ -87,7 +90,7 @@
             >
                 <div style="width: 100%; text-align: center">
                     <img
-                        src="%PUBLIC_URL%/logo512.png"
+                        src="/logo512.png"
                         alt=""
                         style="aspect-ratio: 1; width: 50%; max-width: 512px; border-radius: 32px; padding: 0; margin: 0"
                     />
@@ -106,15 +109,9 @@
                 </div>
             </div>
         </div>
-        <!--
-            This HTML file is a template.
-            If you open it directly in the browser, you will see an empty page.
-
-            You can add webfonts, meta tags, or analytics to this file.
-            The build step will place the bundled scripts into the <body> tag.
-
-            To begin the development, run `npm start` or `yarn start`.
-            To create a production bundle, use `npm run build` or `yarn build`.
-        -->
+        <script
+            type="module"
+            src="/src/main.tsx"
+        ></script>
     </body>
 </html>
