--- a/index.html
+++ b/index.html
@@ -27,6 +27,54 @@
             href="/manifest.json"
         />
         <title>Moja kuchárska kniha 2</title>
+        <style>
+            .init-loader {
+                z-index: 3;
+                position: fixed;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: white;
+                font-family:
+                    system-ui,
+                    -apple-system,
+                    'Segoe UI',
+                    Roboto,
+                    'Helvetica Neue',
+                    'Noto Sans',
+                    'Liberation Sans',
+                    Arial,
+                    sans-serif,
+                    'Apple Color Emoji',
+                    'Segoe UI Emoji',
+                    'Segoe UI Symbol',
+                    'Noto Color Emoji';
+            }
+            .init-loader-header {
+                padding-top: 0.3rem;
+                font-size: calc(1.325rem + 0.9vw);
+                margin-top: 0;
+                margin-bottom: 0.5rem;
+                font-weight: 500;
+                line-height: 1.2;
+            }
+            .init-loader-logo {
+                aspect-ratio: 1;
+                width: 50%;
+                max-width: 512px;
+                border-radius: 32px;
+                padding: 0;
+                margin: 0;
+            }
+            .init-loader-content {
+                width: 100%;
+                text-align: center;
+            }
+        </style>
 
         <script>
             var env = (() => {
@@ -44,11 +92,11 @@
                 };
                 // <% if (process.env.NODE_ENV === 'production') { %>
                 return {
-                    baseApiUrl: toString('${BASE_API_URL}'),
+                    baseApiUrl: toString('${BASE_API_URL}')
                 };
                 // <% } else { %>
                 return {
-                    BASE_PATH: '/api',
+                    BASE_PATH: '/api'
                 };
                 // <% } %>
             })();
@@ -60,52 +108,14 @@
         <script src="/DragDropTouch.js"></script>
 
         <div id="root">
-            <div
-                style="
-                    z-index: 3;
-                    position: fixed;
-                    top: 0;
-                    bottom: 0;
-                    left: 0;
-                    right: 0;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    background-color: white;
-                    font-family:
-                        system-ui,
-                        -apple-system,
-                        'Segoe UI',
-                        Roboto,
-                        'Helvetica Neue',
-                        'Noto Sans',
-                        'Liberation Sans',
-                        Arial,
-                        sans-serif,
-                        'Apple Color Emoji',
-                        'Segoe UI Emoji',
-                        'Segoe UI Symbol',
-                        'Noto Color Emoji';
-                "
-            >
-                <div style="width: 100%; text-align: center">
+            <div class="init-loader">
+                <div class="init-loader-content">
                     <img
                         src="/logo512.png"
                         alt=""
-                        style="aspect-ratio: 1; width: 50%; max-width: 512px; border-radius: 32px; padding: 0; margin: 0"
+                        class="init-loader-logo"
                     />
-                    <h1
-                        style="
-                            padding-top: 0.3rem;
-                            font-size: calc(1.325rem + 0.9vw);
-                            margin-top: 0;
-                            margin-bottom: 0.5rem;
-                            font-weight: 500;
-                            line-height: 1.2;
-                        "
-                    >
-                        Načítava sa...
-                    </h1>
+                    <h1 class="init-loader-header">Načítava sa...</h1>
                 </div>
             </div>
         </div>
